--- a/index.html
+++ b/index.html
@@ -354,14 +354,15 @@
 	<!-- developer -->
 	<section id="developer">
 		<div class="row section-intro">
-		   		<div class="col-twelve">
+			<div class="col-twelve">
 
-		   			<h5>Developer</h5>
-		   			<h1>All about my Coding.</h1>
+				<h5>Developer</h5>
+				<h1>All about my Coding.</h1>
 
-		   			<p class="lead">Through my passion in Mathematics, I inculcated an interest in Programming. The main area of my interest are Data Structures and OOP Concepts. I also have prowess in working in different frameworks.</p>
+				<p class="lead">Through my passion in Mathematics, I inculcated an interest in Programming. The main area of my interest are Data Structures and OOP Concepts. I also have prowess in working in different frameworks.</p>
 
-		   		</div></div>
+			</div>
+		</div>
 		<div class="row">
 			<div class="col-twelve">
 				<div class="col-twelve sub-header"><h2>Skillset</h2></div>
@@ -474,6 +475,59 @@
 					</ul>
 				</div> 
 			</div>
+		</div>
+		<div class="col-twelve sub-header" style="padding-top: 30px;"><h2>Projects</h2></div>
+		<div class="row" style="padding: 20px;">
+			<div class="col-twelve">
+				<div class="row project">
+					<div class="col-four">
+						<img src="images/projects/zoho.png" class="project-image"></img>
+					</div>
+					<div class="col-eight">
+						<h3 class="project-title">Zoho Sheet</h3>
+						<p class="project-content">In Zoho Sheet iOS, I've worked in migration of the app from Objective-C to Swift 3, and later to Swift 5. I played a key role in introducing VIPER architecture in the app, which made it much more scalable and integrated OOP concepts in the codebase. Other key features that I implemented are Data formats, sheet listing page, landing view, charts listing, color picker view, etc.</p>
+					</div>
+				</div>
+				<div class="row project">
+					<div class="col-four">
+						<img src="images/projects/bothoven.png" class="project-image"></img>
+					</div>
+					<div class="col-eight">
+						<h2 class="project-title">Bothoven</h2>
+						<p class="project-content">Bothoven was a project as part of e-Yantra Robotics Competition (eYRC) 2016. e-Yantra Robotics Competition (eYRC) is a unique annual competition for undergraduate students in Engineering/ Science/ Polytechnic colleges. This project was done using Fire Bird V Robot. The aim was that two firebirds should move along a track to play a set of musical notes. The main tools used in this is C, Python, Data Structures.</p>
+					</div>
+				</div>
+				<div class="row project">
+					<div class="col-four">
+						<img src="images/projects/sunshine.png" class="project-image"></img>
+					</div>
+					<div class="col-eight">
+						<h2 class="project-title">Sunshine</h2>
+						<p class="project-content">Sunshine was a project which was done by us (a team of 4 people from college) during NASA Space App Challenge 2017. The application was built using Ionic 2 and hybrid mobile applications were created. In this app, the user can enter solar panel specifications and get output predictions based on user location and other data. The user can set priority on devices and devices that can be used with available power can be identified. Also, the user can calculate required tilt of the panel based on the current location.</p>
+					</div>
+				</div>
+				<div class="row project">
+					<div class="col-four">
+						<img src="images/projects/eawad.jpg" class="project-image"></img>
+					</div>
+					<div class="col-eight">
+						<h2 class="project-title">Waste Disposal Management Application</h2>
+						<p class="project-content">It was an hybrid mobile application that runs in all major platforms. It was built using Ionic framework. The aim of this project is to easily manage waste disposals using the app with the help of few workers (similar to Uber and Ola). The main tools used in this is Ionic framework, Node.JS and MySQL. This project was my final year main project during B.Tech.</p>
+					</div>
+				</div>
+				<div class="row project">
+					<div class="col-four">
+						<img src="images/projects/medical.png" class="project-image"></img>
+					</div>
+					<div class="col-eight">
+						<h2 class="project-title">Medical App</h2>
+						<p class="project-content">It was an Android application that provide faster medical help by tracking doctor’s location and connecting with patients. The main tools used in this is Android Studio, Node.JS and MongoDB.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-twelve"></div>
 			<div class="col-twelve">
 				<div class="col-twelve sub-header"><h2>Blogs</h2></div>
 				<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/git-anonymize-user-name-and-user-email-in-the-commits-log-a6a21a9d4c09" target="_blank" style="color: inherit;">
