--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 					</div>
 					<div class="col-eight">
 						<h2 class="project-title">Medical App</h2>
-						<p class="project-content">It was an Android application that provide faster medical help by tracking doctor’s location and connecting with patients. The main tools used in this is Android Studio, Node.JS and MongoDB.</p>
+						<p class="project-content">It was an Android application that provide faster medical help by tracking doctor’s location and connecting with patients. The main tools used in this is Android Studio, Node.JS and MongoDB. The project was part of a 24-hour hackathon of Envestnet, Trivandrum.</p>
 					</div>
 				</div>
 			</div>
