--- a/index.html
+++ b/index.html
@@ -480,46 +480,46 @@
 		<div class="row" style="padding: 20px;">
 			<div class="col-twelve">
 				<div class="row project">
-					<div class="col-four">
+					<div class="col-four tab-full">
 						<img src="images/projects/zoho.png" class="project-image"></img>
 					</div>
-					<div class="col-eight">
+					<div class="col-eight tab-full">
 						<h3 class="project-title">Zoho Sheet</h3>
 						<p class="project-content">In Zoho Sheet iOS, I've worked in migration of the app from Objective-C to Swift 3, and later to Swift 5. I played a key role in introducing VIPER architecture in the app, which made it much more scalable and integrated OOP concepts in the codebase. Other key features that I implemented are Data formats, sheet listing page, landing view, charts listing, color picker view, etc.</p>
 					</div>
 				</div>
 				<div class="row project">
-					<div class="col-four">
+					<div class="col-four tab-full">
 						<img src="images/projects/bothoven.png" class="project-image"></img>
 					</div>
-					<div class="col-eight">
+					<div class="col-eight tab-full">
 						<h2 class="project-title">Bothoven</h2>
 						<p class="project-content">Bothoven was a project as part of e-Yantra Robotics Competition (eYRC) 2016. e-Yantra Robotics Competition (eYRC) is a unique annual competition for undergraduate students in Engineering/ Science/ Polytechnic colleges. This project was done using Fire Bird V Robot. The aim was that two firebirds should move along a track to play a set of musical notes. The main tools used in this is C, Python, Data Structures.</p>
 					</div>
 				</div>
 				<div class="row project">
-					<div class="col-four">
+					<div class="col-four tab-full">
 						<img src="images/projects/sunshine.png" class="project-image"></img>
 					</div>
-					<div class="col-eight">
+					<div class="col-eight tab-full">
 						<h2 class="project-title">Sunshine</h2>
 						<p class="project-content">Sunshine was a project which was done by us (a team of 4 people from college) during NASA Space App Challenge 2017. The application was built using Ionic 2 and hybrid mobile applications were created. In this app, the user can enter solar panel specifications and get output predictions based on user location and other data. The user can set priority on devices and devices that can be used with available power can be identified. Also, the user can calculate required tilt of the panel based on the current location.</p>
 					</div>
 				</div>
 				<div class="row project">
-					<div class="col-four">
+					<div class="col-four tab-full">
 						<img src="images/projects/eawad.jpg" class="project-image"></img>
 					</div>
-					<div class="col-eight">
+					<div class="col-eight tab-full">
 						<h2 class="project-title">Waste Disposal Management Application</h2>
 						<p class="project-content">It was an hybrid mobile application that runs in all major platforms. It was built using Ionic framework. The aim of this project is to easily manage waste disposals using the app with the help of few workers (similar to Uber and Ola). The main tools used in this is Ionic framework, Node.JS and MySQL. This project was my final year main project during B.Tech.</p>
 					</div>
 				</div>
 				<div class="row project">
-					<div class="col-four">
+					<div class="col-four tab-full">
 						<img src="images/projects/medical.png" class="project-image"></img>
 					</div>
-					<div class="col-eight">
+					<div class="col-eight tab-full">
 						<h2 class="project-title">Medical App</h2>
 						<p class="project-content">It was an Android application that provide faster medical help by tracking doctor’s location and connecting with patients. The main tools used in this is Android Studio, Node.JS and MongoDB. The project was part of a 24-hour hackathon of Envestnet, Trivandrum.</p>
 					</div>
