mods in content

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 						<div class="timeline-content">
 							<h4>Zoho Corporation</h4>
-							<p style="text-align: justify;">I'm currently working for the iOS app of Zoho Sheet. Zoho Sheet is an online SaaS-based spreadsheet application. I've worked in migration of the app from Objective-C to Swift 3, and later to Swift 5. I played a key role in introducing VIPER architecture in the app, which made it much more scalable and integrated OOP concepts in the codebase. Other key features that I implemented are Data formats, sheet listing page, landing view, charts listing, color picker view, etc.</p>
+							<p style="text-align: justify;">I'm currently working for the iOS app of Zoho Sheet. Zoho Sheet is an online SaaS-based spreadsheet application. The programming languages used for the Zoho Sheet iOS app development are Swift & Objective C.</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -494,7 +494,7 @@
 					</div>
 					<div class="col-eight tab-full">
 						<h2 class="project-title">Bothoven</h2>
-						<p class="project-content">Bothoven was a project as part of e-Yantra Robotics Competition (eYRC) 2016. e-Yantra Robotics Competition (eYRC) is a unique annual competition for undergraduate students in Engineering/ Science/ Polytechnic colleges. This project was done using Fire Bird V Robot. The aim was that two firebirds should move along a track to play a set of musical notes. The main tools used in this is C, Python, Data Structures.</p>
+						<p class="project-content">Bothoven is an interesting project where 2 robots collaborate and play a given sequence of notes placed randomly on an arena to produce music. It was done as a part of e-Yantra Robotics competition conducted by IIT Bombay. The project was realised using Fire Bird V Robots. ZigBee technology was also used to enable wireless communication.</p>
 					</div>
 				</div>
 				<div class="row project">
@@ -512,7 +512,7 @@
 					</div>
 					<div class="col-eight tab-full">
 						<h2 class="project-title">Waste Disposal Management Application</h2>
-						<p class="project-content">It was an hybrid mobile application that runs in all major platforms. It was built using Ionic framework. The aim of this project is to easily manage waste disposals using the app with the help of few workers (similar to Uber and Ola). The main tools used in this is Ionic framework, Node.JS and MySQL. This project was my final year main project during B.Tech.</p>
+						<p class="project-content">Waste Disposal Management Application is a hybrid mobile application that runs on all major platforms. The main objective was to connect garbage collectors and users (similar to Uber and Ola). The app was build in Ionic framework along with Node.js and MySQL.</p>
 					</div>
 				</div>
 				<div class="row project">
@@ -521,7 +521,7 @@
 					</div>
 					<div class="col-eight tab-full">
 						<h2 class="project-title">Medical App</h2>
-						<p class="project-content">It was an Android application that provide faster medical help by tracking doctor’s location and connecting with patients. The main tools used in this is Android Studio, Node.JS and MongoDB. The project was part of a 24-hour hackathon of Envestnet, Trivandrum.</p>
+						<p class="project-content">It's an Android application that intends to provide faster medical care by connecting patients with nearby doctors. This app was build as a part of 24- hour hackathon conducted by Envestnet. The main tools used were Android Studio, Node.js and MongoDB.</p>
 					</div>
 				</div>
 			</div>
