--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 						<div class="timeline-content">
 							<h4>Zoho Corporation</h4>
-							<p style="text-align: justify;">I'm currently working for the iOS app of Zoho Sheet. Zoho Sheet is an online SaaS-based spreadsheet application. The programming languages used for the Zoho Sheet iOS app development are Swift & Objective C.</p>
+							<p style="text-align: justify;">I'm currently working for the iOS app of Zoho Sheet. Zoho Sheet is an online SaaS-based spreadsheet application. Zoho Sheet is one of the fastest spreadsheets available in App Store. The iOS app renders the spreadsheet in 60 FPS (Frames Per Second).</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
