firebase removed, sorry don't want to take risk of hackers :P

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 					</div>
 					<div class="col-eight tab-full">
 						<h2 class="project-title">Sunshine</h2>
-						<p class="project-content">Sunshine was a project which was done by us (a team of 4 people from college) during NASA Space App Challenge 2017. The application was built using Ionic 2 and hybrid mobile applications were created. In this app, the user can enter solar panel specifications and get output predictions based on user location and other data. The user can set priority on devices and devices that can be used with available power can be identified. Also, the user can calculate required tilt of the panel based on the current location.</p>
+						<p class="project-content">This hybrid app was build for the NASA Space App Challenge 2017, a 24-hour hackathon  using Ionic framework. This app lets you calculate the energy produced by the solar panel system and helps you to identify which all appliances can be used with the available power. An additional feature of this app is that it can calculate tilt angle of solar panel based on season and latitude input.</p>
 					</div>
 				</div>
 				<div class="row project">
@@ -525,7 +525,7 @@
 					</div>
 					<div class="col-eight tab-full">
 						<h2 class="project-title">Waste Disposal Management Application</h2>
-						<p class="project-content">Waste Disposal Management Application is a hybrid mobile application that runs on all major platforms. The main objective was to connect garbage collectors and users (similar to Uber and Ola). The app was build in Ionic framework along with Node.js and MySQL.</p>
+						<p class="project-content">Waste Disposal Management Application is a hybrid mobile application that runs on all major platforms. The main objective was to connect garbage collectors and users (similar to Uber and Ola). The app was built in Ionic framework along with Node.js and MySQL.</p>
 					</div>
 				</div>
 				<div class="row project">
@@ -534,7 +534,7 @@
 					</div>
 					<div class="col-eight tab-full">
 						<h2 class="project-title">Medical App</h2>
-						<p class="project-content">It's an Android application that intends to provide faster medical care by connecting patients with nearby doctors. This app was build as a part of 24- hour hackathon conducted by Envestnet. The main tools used were Android Studio, Node.js and MongoDB.</p>
+						<p class="project-content">It's an Android application that intends to provide faster medical care by connecting patients with nearby doctors. This app was built as a part of 24- hour hackathon conducted by Envestnet. The main tools used were Android Studio, Node.js and MongoDB.</p>
 					</div>
 				</div>
 			</div>
@@ -832,31 +832,6 @@
 
    	<div class="row contact-form">
 
-   		<!-- The core Firebase JS SDK is always required and must be listed first -->
-		<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
-
-		<!-- TODO: Add SDKs for Firebase products that you want to use
-		     https://firebase.google.com/docs/web/setup#available-libraries -->
-		<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-analytics.js"></script>
-
-		<script>
-		  // Your web app's Firebase configuration
-		  var firebaseConfig = {
-		    apiKey: "AIzaSyCPuVwHO-9_VdUNXu5LT9uPShNcKWr_P04",
-		    authDomain: "danieljames-c1674.firebaseapp.com",
-		    databaseURL: "https://danieljames-c1674.firebaseio.com",
-		    projectId: "danieljames-c1674",
-		    storageBucket: "danieljames-c1674.appspot.com",
-		    messagingSenderId: "267463825117",
-		    appId: "1:267463825117:web:dc0e971a852cce354ded34",
-		    measurementId: "G-HG1YKD0V4X"
-		  };
-		  // Initialize Firebase
-		  firebase.initializeApp(firebaseConfig);
-		  firebase.analytics();
-		  console.log("Firebase added")
-		</script>
-
    		<div class="col-twelve">
 
             <!-- form -->
@@ -984,6 +959,7 @@
 	</div>
 
 	<!-- JavaScript -->
+	<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 	<script src="js/jquery-2.1.3.min.js"></script>
 	<script src="js/plugins.js"></script>
 	<script src="js/main.js"></script>
