--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
    		<div class="col-twelve">
 
             <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
+            <form action="https://send.pageclip.co/YuzawBxTH9Qkq1dThUMx1tjyTGpciYvu" class="pageclip-form pageclip-form--success" method="post" name="contactForm" id="contactForm" novalidate="novalidate">
       			<fieldset>
 
                   <div class="form-field">
