--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/vendor.css">
 	<link rel="stylesheet" href="css/card.css">
+	<link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
 
 	<!-- script -->
 	<script src="js/modernizr.js"></script>
@@ -835,7 +836,7 @@
    		<div class="col-twelve">
 
             <!-- form -->
-            <form action="https://send.pageclip.co/YuzawBxTH9Qkq1dThUMx1tjyTGpciYvu" class="pageclip-form pageclip-form--success" method="post" name="contactForm" id="contactForm" novalidate="novalidate">
+            <form action="https://send.pageclip.co/YuzawBxTH9Qkq1dThUMx1tjyTGpciYvu" class="pageclip-form pageclip-form--success" method="post" name="contactForm" id="contactForm">
       			<fieldset>
 
                   <div class="form-field">
@@ -876,55 +877,6 @@
          </div> <!-- /col-twelve -->
    		
    	</div> <!-- /contact-form -->
-
-   	<div class="row contact-info">
-
-   		<div class="col-four tab-full">
-
-   			<div class="icon">
-   				<i class="icon-pin"></i>
-   			</div>
-
-   			<h5>Where to find me</h5>
-
-   			<p>
-            1600 Amphitheatre Parkway<br>
-            Mountain View, CA<br>
-            94043 US
-            </p>
-
-   		</div>
-
-   		<div class="col-four tab-full collapse">
-
-   			<div class="icon">
-   				<i class="icon-mail"></i>
-   			</div>
-
-   			<h5>Email Me At</h5>
-
-   			<p>someone@kardswebsite.com<br>
-			   	info@kardswebsite.com			     
-			   </p>
-
-   		</div>
-
-   		<div class="col-four tab-full">
-
-   			<div class="icon">
-   				<i class="icon-phone"></i>
-   			</div>
-
-   			<h5>Call Me At</h5>
-
-   			<p>Phone: (+63) 555 1212<br>
-			   	Mobile: (+63) 555 0100<br>
-			     	Fax: (+63) 555 0101
-			   </p>
-
-   		</div>
-   		
-   	</div> <!-- /contact-info -->
 		
 	</section> <!-- /contact -->
 	
