--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
 				<a href="#cuber">CUBER</a>
 				<a href="#traveller">GALLIVANTER</a>
 				<a href="#gamer">GAMER</a>
-				<!-- <a href="#resume">RESUME</a> -->
-				<!-- <a href="#portfolio">PORTFOLIO</a> -->
-				<!-- <a href="#services">NEWS</a> -->
-				<!-- <a href="#contact">CONTACT</a> -->
+				<a href="#contact">CONTACT</a>
 			</span>
 		</div>
 		<!-- <nav id="main-nav-wrap">
@@ -818,64 +815,52 @@
 		</div>
 	</section> <!-- /gamer -->
 
+	<!-- contact -->
 	<section id="contact">
-
 		<div class="row section-intro">
    		<div class="col-twelve">
+				<h5>Contact</h5>
+				<h1>I'd Love To Hear From You.</h1>
+			</div> 
+		</div>
 
-   			<h5>Contact</h5>
-   			<h1>I'd Love To Hear From You.</h1>
+	   	<div class="row contact-form">
 
-   		</div> 
-   	</div> <!-- /section-intro -->
+	   		<div class="col-twelve">
 
-   	<div class="row contact-form">
+	            <!-- form -->
+	            <form action="https://send.pageclip.co/YuzawBxTH9Qkq1dThUMx1tjyTGpciYvu" class="pageclip-form pageclip-form--success" method="post" name="contactForm" id="contactForm">
+	      			<fieldset>
 
-   		<div class="col-twelve">
-
-            <!-- form -->
-            <form action="https://send.pageclip.co/YuzawBxTH9Qkq1dThUMx1tjyTGpciYvu" class="pageclip-form pageclip-form--success" method="post" name="contactForm" id="contactForm">
-      			<fieldset>
-
-                  <div class="form-field">
- 						   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
-                  </div>
-                  <div class="form-field">
-	      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
-	               </div>
-                  <div class="form-field">
-	     				   <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
-	               </div>                       
-                  <div class="form-field">
-	                 	<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
-	               </div>                      
-                 <div class="form-field">
-                     <button class="submitform">Submit</button>
-                     <div id="submit-loader">
-                        <div class="text-loader">Sending...</div>                             
-       				      <div class="s-loader">
-								  	<div class="bounce1"></div>
-								  	<div class="bounce2"></div>
-								  	<div class="bounce3"></div>
+	                  <div class="form-field">
+	 						   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
+	                  </div>
+	                  <div class="form-field">
+		      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
+		               </div>
+	                  <div class="form-field">
+		     				   <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
+		               </div>                       
+	                  <div class="form-field">
+		                 	<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
+		               </div>                      
+	                 <div class="form-field">
+	                     <button class="submitform">Submit</button>
+	                     <div id="submit-loader">
+	                        <div class="text-loader">Sending...</div>                             
+	       				      <div class="s-loader">
+									  	<div class="bounce1"></div>
+									  	<div class="bounce2"></div>
+									  	<div class="bounce3"></div>
+									</div>
 								</div>
-							</div>
-                  </div>
+	                  </div>
 
-      			</fieldset>
-      		</form> <!-- Form End -->
-
-            <!-- contact-warning -->
-            <div id="message-warning">            	
-            </div>            
-            <!-- contact-success -->
-      		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
-
-         </div> <!-- /col-twelve -->
-   		
-   	</div> <!-- /contact-form -->
-		
+	      			</fieldset>
+	      		</form> <!-- Form End -->
+	         </div> <!-- /col-twelve -->
+	   		
+	   	</div> <!-- /contact-form -->
 	</section> <!-- /contact -->
 	
 	<!-- footer -->
