--- a/index.html
+++ b/index.html
@@ -51,48 +51,25 @@
 	<!-- navigationbar -->
 	<header>   	
 		<div class="topnav" id="navbar">
-			<span style="display: inline-block;">
-				<a class="active" href="#intro">HOME</a>
-				<a href="#about">ABOUT</a>
-				<a href="#developer">DEVELOPER</a>
-				<a href="#cuber">CUBER</a>
-				<a href="#traveller">GALLIVANTER</a>
-				<a href="#gamer">GAMER</a>
-				<a href="#contact">CONTACT</a>
-			</span>
-		</div>
-		<!-- <nav id="main-nav-wrap">
-			<ul>
-				<li class="current"><a href="#intro" title="">Home</a></li>
-				<li><a href="#about" title="">About</a></li>
-				<li><a href="#resume" title="">Resume</a></li>
-				<li><a href="#portfolio" title="">Portfolio</a></li>
-				<li><a href="#services" title="">Services</a></li>					
-				<li><a href="#contact" title="">Contact</a></li>	
-				<li><a href="styles.html" title="">Style Demo</a></li>				
+			<ul id="nav" class="nav">
+				<li class="current"><a class="smoothscroll" href="#intro">Home</a></li>
+				<li><a class="smoothscroll" href="#about">About</a></li>
+				<li><a class="smoothscroll" href="#developer">Developer</a></li>
+				<li><a class="smoothscroll" href="#cuber">Cuber</a></li>
+				<li><a class="smoothscroll" href="#traveller">Gallivanter</a></li>
+				<li><a class="smoothscroll" href="#gamer">Gamer</a></li>
+				<li><a class="smoothscroll" href="#contact">Contact</a></li>
 			</ul>
-		</nav> -->
-		<div class="row">
-			<!-- <div class="top-bar"> -->
-				<!-- <a class="menu-toggle" href="#"><span>Menu</span></a>
-
-	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
-		      </div>	 -->	      
-
-		   	<!-- <nav id="main-nav-wrap">
-					<ul class="main-navigation">
-						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
-						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
-					</ul>
-				</nav> -->    		
-			<!-- </div> /top-bar  -->
-		</div> <!-- /row --> 		
+			<!-- <span style="display: inline-block;">
+				<a class="active" href="#intro">HOME</a>
+				<li><a class="smoothscroll" href="#about">ABOUT</a></li>
+				<li><a class="smoothscroll" href="#developer">DEVELOPER</a></li>
+				<li><a class="smoothscroll" href="#cuber">CUBER</a></li>
+				<li><a class="smoothscroll" href="#traveller">GALLIVANTER</a></li>
+				<li><a class="smoothscroll" href="#gamer">GAMER</a></li>
+				<li><a class="smoothscroll" href="#contact">CONTACT</a></li>
+			</span> -->
+		</div>
 	</header> <!-- /navigationbar -->
 
 	<!-- intro -->
