--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 			<div class="col-twelve">
 				<h5>Gamer</h5>
 				<h1>Just another Noob :-P</h1>
-				<p class="lead">I am not a hardcore gamer who spends hours and hours in games. I just play a few recreational games that I come across. But I would like to connect with a lot of people in these games to make it more fun...</p>
+				<p class="lead">I am just a casual gamer who plays a few recreational games occassionally. But I would like to connect with a lot of people in these games to make it more fun...</p>
 			</div>
 		</div>
 		<div class="row">
@@ -822,7 +822,7 @@
 		                 	<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
 		               </div>                      
 	                 <div class="form-field">
-	                     <button class="submitform">Submit</button>
+	                     <button class="submitform">Send</button>
 	                     <div id="submit-loader">
 	                        <div class="text-loader">Sending...</div>                             
 	       				      <div class="s-loader">
