spacing issues fixed

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
 		<div class="row resume-timeline">
 
-			<div class="col-twelve sub-header"><h2>Education</h2></div>
+			<div class="col-twelve sub-header" style="padding-bottom: 0;"><h2>Education</h2></div>
 
 			<div class="col-twelve">
 
