removal of couple of wrong refs

--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/git-anonymize-user-name-and-user-email-in-the-commits-log-a6a21a9d4c09" target="_blank" style="color: inherit;">
+				<div class="col-four tab-full">
 					<div class="gamepost" style="text-align: center;">
 						<div class="row" style="margin: 10px; padding-top: 10px;">
 							<img src="images/games/pogo.png"></img>
@@ -778,9 +778,9 @@
 						<div class="row" style="margin: 10px;">
 							<p>Let's be friends in Pokémon GO! My Trainer Code is 0443 8105 5929!</p>
 						</div>
-					</div></a>
+					</div>
 				</div>
-				<div class="col-four tab-full"><a href="https://medium.com/@daniel_james/git-anonymize-user-name-and-user-email-in-the-commits-log-a6a21a9d4c09" target="_blank" style="color: inherit;">
+				<div class="col-four tab-full">
 					<div class="gamepost" style="text-align: center;">
 						<div class="row" style="margin: 10px; padding-top: 10px;">
 							<img src="images/games/coc.png"></img>
@@ -792,7 +792,7 @@
 						<div class="row" style="margin: 10px;">
 							<p>Here's my Player Code - #28CVYJPC2! Be friend with me and let's share COC tips & tricks!</p>
 						</div>
-					</div></a>
+					</div>
 				</div>
 			</div>
 		</div>
