new linkedin url

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		</div>
 		<ul class="intro-social">        
 			<li><a href="mailto:djdany444@gmail.com" target="_blank"><i class="fa fa-envelope" style="font-size: 30px;"></i></a></li>
-			<li><a href="http://www.linkedin.com/in/danieljames4" target="_blank"><i class="fab fa-linkedin" style="font-size: 30px;"></i></a></li>
+			<li><a href="http://www.linkedin.com/in/danieljames-dj" target="_blank"><i class="fab fa-linkedin" style="font-size: 30px;"></i></a></li>
 			<!-- <li><a href="https://twitter.com/djdany444" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
 			<li><a href="https://github.com/danieljames-dj" target="_blank"><i class="fab fa-github" style="font-size: 30px;"></i></a></li>
 			<li><a href="https://medium.com/@daniel_james" target="_blank"><i class="fab fa-medium" style="font-size: 30px;"></i></a></li>
