wca button not working

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 				<h5>Cuber</h5>
 				<h1>It's my world of puzzles.</h1>
 				<p class="lead">I started my cubing venture by solving a simple 3x3 puzzle in 2012. Later I was introduced to various other twisty puzzles and methodologies through World Cube Association. Now I'm a WCA Delegate who has the responsibility of supervision of WCA competitions. I'm also a part of WCA Results Team & WCA Executive Assistant Team.</p>
-				<a class="button stroke smoothscroll" href="https://www.worldcubeassociation.org/persons/2012JAME04" target="_blank" title="">Visit my WCA Profile</a>
+				<a class="button stroke" href="https://www.worldcubeassociation.org/persons/2012JAME04" target="_blank" title="">Visit my WCA Profile</a>
 			</div>
 		</div>
 		<div class="sub-header"><h2>Statistics</h2></div>
