Makku added Profile pic

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<h5>About</h5>
 				<h1>Let me introduce myself.</h1>
 				<div class="intro-info">
-					<img src="images/profile-pic.jpeg" alt="Profile Picture">
+					<img src="images/profile-pic.jpg" alt="Profile Picture">
 					<p class="lead" style="text-align: justify;">I'm Daniel James and friends call me Dany or DJ. I'm currently working as an iOS developer in Zoho Corporation, Chennai. I'm interested in developing web apps & mobile apps. I'm a Math nerd and have a strong grit in solving computational problems. Machine learning is one of the domain that I'm very inquisitive about. I'm an avid speedcuber and a fun loving guy.</p>
 				</div> 
 			</div>
